# dack

./: .gitignore  README.md  pyproject.toml
src/: dack.py
