[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dack"
version = "0.1.3"
description = "Dack is a file format that can be stored in any text file"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Marisha Lozada-Norcross", email = "marishaloznorcross@gmail.com" },
]

[project.urls]
Repository = "https://github.com/Wirlocke/dack"

[tool.hatch.build.targets.wheel]
packages = ["src/dack.py"]
